[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
description = "Semihosting for ARM Cortex-M processors"
documentation = "https://docs.rs/cortex-m-semihosting"
keywords = ["semihosting", "arm", "cortex-m"]
license = "MIT OR Apache-2.0"
name = "cortex-m-semihosting"
repository = "https://github.com/japaric/cortex-m-semihosting"
version = "0.2.1"

[build-dependencies]
cc = "1.0.10"

[features]
inline-asm = []
default = ["inline-asm"]